/*
Package metadata provides the interface of the gRPC methods.

Commands for metadata requests except model, simulation are provided by this interfaces.

Generate gRPC code:
  protoc --go_out=. --go_opt=paths=source_relative \
  --go-grpc_out=. --go-grpc_opt=paths=source_relative \
  api/grpc/metadata/metadata.proto
*/
syntax = "proto3";

package metadata;

option go_package = "github.com/Goboolean/core-system.command/api/grpc;metadata";

// MedataService
//
// Provides commands for requests related to metadata
service MetadataService {
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {}
  rpc GetStockInfo(GetStockInfoRequest) returns (GetStockInfoResponse) {}
  rpc GetStockList(GetStockListRequest) returns (GetStockListResponse) {}
}


// Personal information query command
message GetUserInfoRequest {
  string user_token = 1; // To verify access to information
}

message GetUserInfoResponse {
  // need implement
}


// Stock information query command
message GetStockInfoRequest {
  string stock_id = 1;
}

message GetStockInfoResponse {
  // need implement
}



// Stock list information query command
message GetStockListRequest {
  // need implement
}

message GetStockListResponse {
  // need implement
}